@@ -26,6 +26,14 @@ and is now defined generic in class power.  INCOMPATIBILITY.
 by the code generator; see Predicate.thy for an example.
 
 
+*** ML ***
+
+* Eliminated old Method.add_methods and related cominators for "method
+args".  INCOMPATIBILITY, need to use simplified Method.setup
+introduced in Isabelle2009.
+
+
+
 New in Isabelle2009 (April 2009)
 --------------------------------
 
